<resources>
    <string name="app_name">SMS_Auto_Registration</string>
    <string name="logo_name">스미스 캘린더</string>
    <string name="SMS_list">SMS 등록 알림함</string>
    <string name="schedule_list">일정 목록</string>
    <string name="do_list">할 일 목록</string>
    <string name="do_add">할 일</string>
    <string name="anniver_list">기념일 목록</string>
    <string name="search_list">검색</string>
    <string name="search_hint">날짜, 내용을 검색해주세요   예) 날짜-2019.01.09</string>
    <string name="setting">설정</string>
    <string name="pattern">SMS 등록 패턴</string>
    <string name="auto_sms">SMS 일정 자동 등록</string>
    <string name="alram_set">알림 설정</string>
    <string name="sync">동기화</string>
    <string name="send_message">문의 보내기</string>
    <string name="update">공지사항</string>
    <string name="set_pattern">SMS 등록 패턴</string>
    <string name="patone">패턴1</string>
    <string name="pattwo">패턴2</string>
    <string name="group_user">그룹캘린더 참여자</string>
    <string name="group_add">그룹캘린더 생성</string>
    <string name="changelist">변경 내역</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="title">제목 :</string>
    <string name="content">내용 :</string>
    <string name="time">시간 :</string>
    <string name="date">날짜 :</string>
    <string name="alram">알림 :</string>
    <string name="date_repeat">일정 반복 :</string>
    <string name="change_user">변경자</string>
    <string name="user">참석자명</string>
    <string name="userdot">참석자 :</string>
    <string name="eve_month">매 월</string>
    <string name="eve_year">매 년</string>
    <string name="anniver_add">기념일</string>
    <string name="anniverdot">기념일 :</string>
    <string name="start_date">시작기간 :</string>
    <string name="end_date">종료기간 :</string>
    <string name="am">당일 오전</string>
    <string name="pm">당일 정오</string>
    <string name="yester">하루 전</string>
    <string name="weekago">일주일 전</string>
    <string name="place">장소 :</string>
    <string name="sche_add">일정</string>
    <string name="appwidget_text">2019-1-10</string>
    <string name="add_widget">Add widget</string>
    <string name="show">보기방식</string>
    <string name="year_month">%4d년%1d월</string>
    <string name="logout">로그아웃</string>
    <string name="personal_Caleandar">개인 캘린더</string>
    <string name="group_Caleandar">그룹 캘린더</string>
    <string name="spiner_promp">choose option</string>
    <string name="group_warn">생성된 그룹캘린더가 없습니다!</string>
    <string name="groupAdd_invite_hint">UID를 입력하세요.\n(&quot;,&quot;로 구분)</string>


</resources>
