<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/group_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bottom_edge"
        android:orientation="horizontal">

        <Button
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:onClick="backWard"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/group_add"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/group_top"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/title"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/title"
            android:textColor="@color/black"
            android:background="@drawable/bottom_edge" />

        <TextView
            android:id="@+id/attand_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/userdot"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/invite"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/attand_user"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/attand_user"
            android:background="@drawable/thin_bottom_edge"
            android:hint="@string/groupAdd_invite_hint"
            android:lines="50"
            android:gravity="center"
            android:textColorHint="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/attand_user"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/invite"
            android:background="@drawable/personaddicon" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/anniver_bottom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cancel"
            android:text="@string/cancel"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/groupadd_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/confirm"
            android:text="@string/confirm"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>